--- a/styles.css
+++ b/styles.css
@@ -13,54 +13,141 @@ body {
   font-size: 20px;
   font-weight: 450;
 
-  overflow: hidden;
+  overflow: scroll;
+  margin: 0px;
 }
 
 a {
-  text-decoration: none;
   color: black;
+  text-decoration: none;
 }
 
-a:hover {
-  cursor: pointer;
-}
-
-.header {
+/* 🟢  MENU */
+.pollen-menu {
   display: flex;
   justify-content: space-between;
-  align-items: center;
 
-  width: calc(100vw - 40px);
-  margin: auto;
+  padding: 30px 40px;
+}
+
+.pollen-home {
+  font-size: 24px;
+}
+
+.right-item {
+  color: gray;
+  padding-left: 20px;
+  font-size: 18px;
+}
+
+/* 🟢  CONTENT LAYOUT */
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: calc(100% - 80px);
+
+  padding: 20px 40px;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+  min-width: 160px;
+}
+
+/* 🟢  LEFT COL */
+
+.column img {
+  width: calc(100% - 20px);
+  height: calc(100vh - 160px);
+
+  object-fit: cover;
+}
+
+/* 🟢  RIGHT COL */
+.info {
+  width: 100%;
+}
+
+/* 🔵  TOP RIGHT COL */
+.top-info .header {
+  font-size: 30px;
+}
+.top-info .body {
+  font-size: 18px;
+  font-weight: 400;
+  padding-top: 10px;
+}
+
+/* 🔵  BOTTOM RIGHT COL */
+.bottom-info {
+  padding-top: 80px;
+}
+.bottom-info .header {
+  font-size: 20px;
+  padding-top: 30px;
+}
+.bottom-info .body {
+  font-size: 18px;
+  font-weight: 400;
   padding-top: 6px;
 }
 
-.pollen-container {
-  padding: 10px;
+.link-grid {
+  display: flex;
+  flex-wrap: wrap;
 }
-.info-container {
-  padding-left: 6px;
-}
-
-.marquee-container {
-  width: calc(100vw - 200px);
-}
-marquee {
-  border: 1.6px solid black;
-  width: 100%;
-  padding: 6px 0px;
-
-  /* visibility: hidden; */
+.collab {
+  width: 160px;
+  margin: 0px;
+  font-size: 18px;
+  font-weight: 400;
+  padding-top: 2px;
 }
 
-.image-wheel {
-  width: 100%;
-  margin: auto;
-  height: calc(100vh - 200px);
-  margin-top: 50px;
+/* 🟢  RIGHT COL */
+.bottom-links {
+  padding: 0px 40px;
+  margin-top: -20px;
+}
 
-  background-image: url("images/0.jpeg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+@media only screen and (max-width: 1055px) {
+  .pollen-menu {
+    position: sticky;
+    top: 0px;
+
+    color: white;
+    background-color: black;
+  }
+  .pollen-menu a {
+    color: white;
+  }
+
+  .row {
+    display: block;
+    padding: 0px 0px;
+  }
+  .column {
+    width: 100vw;
+  }
+  .column img {
+    width: 110vw;
+    margin-left: -10px;
+  }
+  .header {
+    padding: 0px 20px;
+    padding-top: 30px;
+  }
+  .body {
+    padding: 20px;
+  }
+  .link-grid {
+    padding: 20px;
+  }
+  .bottom-links {
+    padding: 40px 20px;
+  }
 }
