--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ a {
 
 .column img {
   width: calc(100% - 20px);
-  height: calc(100vh - 160px);
+  height: calc(100vh - 170px);
 
   object-fit: cover;
 }
@@ -113,7 +113,15 @@ a {
 /* 🟢  RIGHT COL */
 .bottom-links {
   padding: 0px 40px;
-  margin-top: -20px;
+  margin-top: -10px;
+}
+.bottom-links a {
+  padding: 0px 3px;
+  margin-top: -10px;
+}
+
+object {
+  pointer-events: none;
 }
 
 @media only screen and (max-width: 1055px) {
@@ -150,16 +158,17 @@ a {
     font-size: 40px;
   }
   .body {
-    padding: 20px;
-    font-size: 10px;
+    padding: 18px;
+    font-size: 20px;
   }
   .link-grid {
     padding: 20px;
+    padding-top: 4px;
   }
   .collab {
     width: 360px;
   }
   .bottom-links {
-    padding: 40px 20px;
+    padding: 60px 20px;
   }
 }
