--- a/styles.css
+++ b/styles.css
@@ -34,12 +34,14 @@ a {
 
 .pollen-home {
   font-size: 24px;
+  font-weight: 550;
 }
 
 .right-item {
   color: gray;
+  font-weight: 350;
   padding-left: 20px;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 /* 🟢  CONTENT LAYOUT */
@@ -58,6 +60,8 @@ a {
   flex-basis: 100%;
   flex: 1;
   min-width: 160px;
+
+  position: relative;
 }
 
 /* 🟢  LEFT COL */
@@ -70,13 +74,15 @@ a {
 }
 
 /* 🟢  RIGHT COL */
-.info {
-  width: 100%;
+.bottom-info {
+  position: absolute;
+  bottom: 0px;
 }
 
 /* 🔵  TOP RIGHT COL */
 .top-info .header {
-  font-size: 30px;
+  font-size: 36px;
+  font-weight: 550;
 }
 .top-info .body {
   font-size: 18px;
@@ -85,9 +91,10 @@ a {
 }
 
 /* 🔵  BOTTOM RIGHT COL */
-.bottom-info {
-  padding-top: 80px;
+.building {
+  padding-top: calc(100vh - 600px);
 }
+
 .bottom-info .header {
   font-size: 20px;
   padding-top: 30px;
@@ -167,6 +174,9 @@ object {
   }
   .collab {
     width: 360px;
+  }
+  .bottom-info {
+    position: relative;
   }
   .bottom-links {
     padding: 60px 20px;
