--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
   overflow: scroll;
   margin: 0px;
 
-  -webkit-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 120%;
 }
 
 a {
@@ -140,17 +140,21 @@ object {
     position: sticky;
     top: 0px;
 
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
+    /* filter: drop-shadow(0px 10px 20px #757575); */
+
+    z-index: 999;
   }
   .pollen-menu a {
-    color: white;
+    color: black;
   }
   .pollen-home {
-    font-size: 40px;
+    font-size: 60px;
   }
   .right-item {
     font-size: 40px;
+    line-height: 80px;
   }
 
   .row {
@@ -162,27 +166,53 @@ object {
   }
   .column img {
     width: 100vw;
+    height: 70vh;
   }
-  .header {
-    padding: 0px 20px;
+
+  .top-info .body {
+    padding: 20px 40px;
+    font-size: 60px;
+  }
+  .top-info .header {
+    padding: 0px 40px;
     padding-top: 30px;
+    font-size: 100px;
+  }
+  .bottom-info {
+    padding-top: 200px;
+  }
+
+  .bottom-info .header {
+    padding: 20px 40px;
+    padding-top: 60px;
+    padding-bottom: 0px;
+    font-size: 60px;
+  }
+  .bottom-info .body {
+    padding: 20px 40px;
     font-size: 40px;
   }
-  .body {
-    padding: 18px;
-    font-size: 20px;
-  }
   .link-grid {
-    padding: 20px;
+    padding: 20px 40px;
     padding-top: 4px;
   }
   .collab {
     width: 360px;
+    font-size: 40px;
   }
   .bottom-info {
     position: relative;
   }
   .bottom-links {
-    padding: 60px 20px;
+    padding: 60px 40px;
+    font-size: 80px;
   }
+  object {
+    height: 50px;
+    padding-right: 20px;
+  }
+  /* span {
+    display: inline-block;
+    width: 500px;
+  } */
 }
